@@ -1,8 +1,8 @@
 package com.example.HotelBooking;
 import com.example.HotelBooking.model.dto.ReservationRequestDto;
+import com.example.HotelBooking.model.dto.ReservationResponseDto;
 import com.example.HotelBooking.model.entities.*;
 import com.example.HotelBooking.model.enums.ReservationStatus;
-import com.example.HotelBooking.model.enums.RoomStatus;
 import com.example.HotelBooking.repo.*;
 import com.example.HotelBooking.service.implementation.ReservationServiceImplementation;
 import org.junit.jupiter.api.BeforeEach;
@@ -23,76 +23,78 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class ReservationServiceImplementationTest {
 
-    @InjectMocks
-    private ReservationServiceImplementation reservationService;
-
     @Mock private ReservationRepository reservationRepository;
     @Mock private UserRepository userRepository;
     @Mock private RoomRepository roomRepository;
     @Mock private RatePlanRepository ratePlanRepository;
 
+    @InjectMocks
+    private ReservationServiceImplementation reservationService;
+
+    private ReservationRequestDto request;
     private User user;
-    private Room room;
     private RatePlan ratePlan;
+    private Room room;
 
     @BeforeEach
-    void setUp() {
-        user = new User(1L, "John Doe", "john@example.com", "0700000000");
-        room = new Room(1L, RoomStatus.AVAILABLE, "101", "1", null, null);
-        ratePlan = new RatePlan(1L, null, null, new BigDecimal("300.00"), "Flexible", null, null);
+    void setup() {
+        user = new User();
+        user.setId(1L);
+
+        ratePlan = new RatePlan();
+        ratePlan.setId(1L);
+        ratePlan.setPricePerNight(BigDecimal.valueOf(100));
+
+        room = new Room();
+        room.setId(1L);
+        room.setRoomNumber("101");
+
+        request = new ReservationRequestDto();
+        request.setUserId(1L);
+        request.setRatePlanId(1L);
+        request.setRoomIds(Set.of(1L));
+        request.setCheckInDate(LocalDate.now().plusDays(1));
+        request.setCheckOutDate(LocalDate.now().plusDays(3));
     }
 
     @Test
-    void whenValidRequest_thenCreateReservationSuccessfully() {
-        // arrange
-        ReservationRequestDto dto = new ReservationRequestDto();
-        dto.setUserId(1L);
-        dto.setRatePlanId(1L);
-        dto.setRoomIds(Set.of(1L));
-        dto.setCheckInDate(LocalDate.of(2025, 11, 10));
-        dto.setCheckOutDate(LocalDate.of(2025, 11, 12));
-
+    void whenValidReservation_thenCreateSuccessfully() {
+        // mock dependencies
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
         when(ratePlanRepository.findById(1L)).thenReturn(Optional.of(ratePlan));
-        when(roomRepository.findAllById(any())).thenReturn(List.of(room));
-        when(reservationRepository.findConflictingReservations(any(), any(), any())).thenReturn(Collections.emptyList());
-        when(reservationRepository.save(any())).thenAnswer(inv -> inv.getArgument(0));
+        when(roomRepository.findAllById(anyList())).thenReturn(List.of(room));
+        when(reservationRepository.findConflictingReservations(anyList(), any(), any(), any()))
+                .thenReturn(Collections.emptyList());
+
+        Reservation saved = new Reservation();
+        saved.setId(10L);
+        saved.setUser(user);
+        saved.setStatus(ReservationStatus.ONHOLD);
+        saved.setTotalAmount(BigDecimal.valueOf(200));
+        when(reservationRepository.save(any())).thenReturn(saved);
 
         // act
-        var response = reservationService.createReservation(dto);
+        ReservationResponseDto response = reservationService.createReservation(request);
 
         // assert
         assertNotNull(response);
         assertEquals("ONHOLD", response.getStatus());
-        assertEquals(new BigDecimal("600.00"), response.getTotalAmount());
+        assertEquals(BigDecimal.valueOf(200), response.getTotalAmount());
         verify(reservationRepository, times(1)).save(any());
     }
 
     @Test
-    void whenConflictingReservationExists_thenThrowException() {
-        // arrange
-        ReservationRequestDto dto = new ReservationRequestDto();
-        dto.setUserId(1L);
-        dto.setRatePlanId(1L);
-        dto.setRoomIds(Set.of(1L));
-        dto.setCheckInDate(LocalDate.of(2025, 11, 10));
-        dto.setCheckOutDate(LocalDate.of(2025, 11, 12));
-
-        Reservation conflict = new Reservation();
-        conflict.setStatus(ReservationStatus.CONFIRMED);
-        conflict.setRooms(Set.of(room));
-
+    void whenRoomsConflict_thenThrowException() {
         when(userRepository.findById(1L)).thenReturn(Optional.of(user));
         when(ratePlanRepository.findById(1L)).thenReturn(Optional.of(ratePlan));
-        when(roomRepository.findAllById(any())).thenReturn(List.of(room));
-        when(reservationRepository.findConflictingReservations(any(), any(), any()))
-                .thenReturn(List.of(conflict));
+        when(roomRepository.findAllById(anyList())).thenReturn(List.of(room));
 
-        // act & assert
+        when(reservationRepository.findConflictingReservations(anyList(), any(), any(), any()))
+                .thenReturn(List.of(new Reservation())); // simulate conflict
+
         RuntimeException ex = assertThrows(RuntimeException.class,
-                () -> reservationService.createReservation(dto));
-        assertTrue(ex.getMessage().contains("already booked"));
-        verify(reservationRepository, never()).save(any());
+                () -> reservationService.createReservation(request));
+
+        assertTrue(ex.getMessage().contains("Rooms already booked"));
     }
 }
-
